--- a/views/login.html
+++ b/views/login.html
@@ -14,6 +14,7 @@
                 <button type="submit" class="btn btn-dark mb-3">Отправить</button>
                 <a href="/register" class="btn btn-dark" onclick="route()">Зарегистрироваться</a>
             </div>
+            <div class="mt-3 text-center error-mes" style="display: none">Неверный логин или пароль</div>
         </form>
     </div>
 </div>
