Добавил карточку профиля, логику его получения и мелкие исправления
В карточке регистрации поменял название, вместо "Вход" теперь пишется "Регистрация", слегка поменял расположения кнопок через bootstrap у карточек логина и регистрации

--- a/views/register.html
+++ b/views/register.html
@@ -1,6 +1,6 @@
 <div class="card text-bg-secondary mx-auto mt-4" style="width: 30rem;">
   <div class="card-body">
-    <h3 class="card-title">Вход</h3>
+    <h3 class="card-title">Регистрация</h3>
     <form id="form-registration">
       <div class="mb-3">
         <label for="exampleInputUserName" class="form-label">ФИО</label>
@@ -34,7 +34,7 @@
       <div class="d-grid">
         <button type="submit" class="btn btn-dark mb-3">Зарегестрироваться</button>
       </div>
-      <div class="mt-3 text-center error-mes" style="display: none">Неверные данные</div>
+      <div class="text-center error-mes" style="display: none">Неверные данные</div>
     </form>
   </div>
 </div>
