--- a/views/login.html
+++ b/views/login.html
@@ -12,9 +12,9 @@
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-dark mb-3">Отправить</button>
-                <a href="/register" class="btn btn-dark" onclick="route()">Зарегистрироваться</a>
+                <a href="/register" class="btn btn-dark mb-3" onclick="route()">Зарегистрироваться</a>
             </div>
-            <div class="mt-3 text-center error-mes" style="display: none">Неверный логин или пароль</div>
+            <div class="text-center error-mes" style="display: none">Неверный логин или пароль</div>
         </form>
     </div>
 </div>
