Добавил логику изменения профиля и навбара и изменил логику создания карточки профиля
Навбар обновляется, если время токена пользователя истекло, а он попытался войти в профиль и в таком случае его карточка профиля создаваться не будет

--- a/views/login.html
+++ b/views/login.html
@@ -10,9 +10,9 @@
                 <label for="exampleInputPassword" class="form-label">Пароль</label>
                 <input type="password" class="form-control" id="exampleInputPassword" name="loginPassword">
             </div>
-            <div class="d-grid">
-                <button type="submit" class="btn btn-dark mb-3">Отправить</button>
-                <a href="/register" class="btn btn-dark mb-3" onclick="route()">Зарегистрироваться</a>
+            <div class="d-grid gap-3 mb-3">
+                <button type="submit" class="btn btn-dark">Отправить</button>
+                <a href="/register" class="btn btn-dark" onclick="route()">Зарегистрироваться</a>
             </div>
             <div class="text-center error-mes" style="display: none">Неверный логин или пароль</div>
         </form>
