--- a/views/register.html
+++ b/views/register.html
@@ -31,8 +31,8 @@
         <input type="password" class="form-control" id="exampleInputPassword" name="registerPassword" aria-describedby="passwordHelp">
         <div id="passwordHelp" class="form-text">У пароля должна быть хотя бы 1 цифра.</div>
       </div>
-      <div class="d-grid">
-        <button type="submit" class="btn btn-dark mb-3">Зарегестрироваться</button>
+      <div class="d-grid mb-3">
+        <button type="submit" class="btn btn-dark">Зарегестрироваться</button>
       </div>
       <div class="text-center error-mes" style="display: none">Неверные данные</div>
     </form>
