--- a/views/profile.html
+++ b/views/profile.html
@@ -4,11 +4,11 @@
     <form id="form-profile">
       <div class="mb-3">
         <label for="exampleInputUserName" class="form-label">ФИО</label>
-        <input type="text" class="form-control-plaintext" id="exampleInputUserName" name="username" placeholder="+7 (xxx) xxx-xx-xx" value ="">
+        <input type="text" class="form-control-plaintext" id="exampleInputUserName" name="username" placeholder="Иванов Иван Иванович" value ="">
       </div>
       <div class="mb-3">
         <label for="exampleInputBirthDate" class="form-label">Дата Рождения</label>
-        <input type="text" class="form-control-plaintext" id="exampleInputBirthDate" name="birthDate" value ="">
+        <input type="date" class="form-control-plaintext" id="exampleInputBirthDate" name="birthDate" value ="" disabled>
       </div>
       <div CLASS="mb-3">
         <label for="exampleInputGender" class="form-label">Пол</label>
@@ -25,6 +25,12 @@
         <label for="exampleInputEmail" class="form-label">Email</label>
         <input type="email" class="form-control-plaintext" id="exampleInputEmail" name="email" placeholder="name@example.com" value ="">
       </div>
+      <div class="d-grid gap-3 mb-3">
+        <button type="button" class="btn btn-dark" id="ChangeProfile" style="display: block">Изменить</button>
+        <button type="button" class="btn btn-dark" id="CancelChange" style="display: none">Отмена</button>
+        <button type="submit" class="btn btn-dark" id="SaveChange" style="display: none">Сохранить</button>
+      </div>
+      <div class="text-center error-mes" style="display: none">Неверные данные</div>
     </form>
   </div>
 </div>
