--- a/views/profile.html
+++ b/views/profile.html
@@ -4,11 +4,11 @@
     <form id="form-profile">
       <div class="mb-3">
         <label for="exampleInputUserName" class="form-label">ФИО</label>
-        <input type="text" class="form-control-plaintext" id="exampleInputUserName" name="username" placeholder="Иванов Иван Иванович" value ="">
+        <input type="text" readonly class="form-control-plaintext" id="exampleInputUserName" name="username" placeholder="Иванов Иван Иванович" value ="">
       </div>
       <div class="mb-3">
         <label for="exampleInputBirthDate" class="form-label">Дата Рождения</label>
-        <input type="date" class="form-control-plaintext" id="exampleInputBirthDate" name="birthDate" value ="" disabled>
+        <input type="date" readonly class="form-control-plaintext" id="exampleInputBirthDate" name="birthDate" value ="">
       </div>
       <div CLASS="mb-3">
         <label for="exampleInputGender" class="form-label">Пол</label>
@@ -19,11 +19,11 @@
       </div>
       <div class="mb-3">
         <label for="exampleInputPhone" class="form-label">Телефон</label>
-        <input type="text" class="form-control-plaintext" id="exampleInputPhone" name="phone" placeholder="+7 (xxx) xxx-xx-xx" value ="">
+        <input type="text" readonly class="form-control-plaintext" id="exampleInputPhone" name="phone" placeholder="+7 (xxx) xxx-xx-xx" value ="">
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail" class="form-label">Email</label>
-        <input type="email" class="form-control-plaintext" id="exampleInputEmail" name="email" placeholder="name@example.com" value ="">
+        <input type="email" readonly class="form-control-plaintext" id="exampleInputEmail" name="email" placeholder="name@example.com" value ="">
       </div>
       <div class="d-grid gap-3 mb-3">
         <button type="button" class="btn btn-dark" id="ChangeProfile" style="display: block">Изменить</button>
