--- a/views/login.html
+++ b/views/login.html
@@ -1,20 +1,22 @@
-<div class="card text-bg-secondary mx-auto mt-4" style="width: 30rem;">
-    <div class="card-body">
-        <h3 class="card-title">Вход</h3>
-        <form id="form-login">
-            <div class="mb-3">
-                <label for="exampleInputEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail" name="email" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword" class="form-label">Пароль</label>
-                <input type="password" class="form-control" id="exampleInputPassword" name="loginPassword">
-            </div>
-            <div class="d-grid gap-3 mb-3">
-                <button type="submit" class="btn btn-dark">Отправить</button>
-                <a href="/register" class="btn btn-dark" onclick="route()">Зарегистрироваться</a>
-            </div>
-            <div class="text-center error-mes" style="display: none">Неверный логин или пароль</div>
-        </form>
+<div class="d-flex align-items-center">
+    <div class="card mx-auto mt-4" style="width: 30rem;">
+        <div class="card-body">
+            <h3 class="card-title">Вход</h3>
+            <form id="form-login">
+                <div class="mb-3">
+                    <label for="exampleInputEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail" name="email" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword" class="form-label">Пароль</label>
+                    <input type="password" class="form-control" id="exampleInputPassword" name="loginPassword">
+                </div>
+                <div class="d-grid gap-3 mb-3">
+                    <button type="submit" class="btn btn-primary">Отправить</button>
+                    <a href="/register" class="btn btn-secondary" onclick="route()">Зарегистрироваться</a>
+                </div>
+                <div class="text-center error-mes" style="display: none">Неверный логин или пароль</div>
+            </form>
+        </div>
     </div>
 </div>
