Сделал начало главной страницы, добавил сервер в через node.js
Сделал так что теперь после авторизация пользователь остается авторизованым несмотря на то перезагрузил он страницу или нет, исправил появление и сокрытие объектов, которые появляются в зависимочти от того авторизован пользователь или нет, сделал при первом заходе в приложение появление фильтра и первых пяти постов без фильтра

--- a/views/profile.html
+++ b/views/profile.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-end gap-3 mb-3">
-          <button type="button" class="btn btn-primary ml-auto" id="ChangeProfile" style="display: block">Изменить</button>
+          <button type="button" class="btn btn-primary" id="ChangeProfile" style="display: block">Изменить</button>
           <button type="button" class="btn btn-secondary" id="CancelChange" style="display: none">Отмена</button>
           <button type="submit" class="btn btn-primary" id="SaveChange" style="display: none">Сохранить</button>
         </div>
