Добавил логику на добавление и удаление лайков у постов

--- a/views/filter.html
+++ b/views/filter.html
@@ -70,7 +70,7 @@
       </div>
       <div class="d-flex align-items-center">
         <p class="count-like m-0">0</p>
-        <button type="button" class="btn" id="addOrDeleteLike"><i class="far fa-heart"></i></button>
+        <button type="button" class="btn" id="addOrDeleteLike"><i class="far fa-heart" id="hasLike"></i></button>
       </div>
     </div>
   </div>
