Добавил пагинацию, фильтрацию и добавил мелкие изменения
Изменил роутинг, чтобы были видны параметры, на основе параметров в роутинге сделал пагинацию и фильтрацию, настроил чтобы все это выглядело как в макете, добавил адреса в посты, изменил название кнопки в логине с "отправить" на "войти"

--- a/views/login.html
+++ b/views/login.html
@@ -12,8 +12,8 @@
                     <input type="password" class="form-control" id="exampleInputPassword" name="loginPassword">
                 </div>
                 <div class="d-grid gap-3 mb-3">
-                    <button type="submit" class="btn btn-primary">Отправить</button>
-                    <a href="/register" class="btn btn-secondary" onclick="route()">Зарегистрироваться</a>
+                    <button type="submit" class="btn btn-primary">Войти</button>
+                    <a href="/register" class="btn btn-secondary">Зарегистрироваться</a>
                 </div>
                 <div class="text-center error-mes" style="display: none">Неверный логин или пароль</div>
             </form>
