--- a/views/filter.html
+++ b/views/filter.html
@@ -1,11 +1,14 @@
 <div class="card-wrapper">
-  <div class="card mx-auto mt-4 col-12 col-md-8" style="height: auto;">
+  <div class="mx-auto mt-4 col-12 col-md-8 d-flex justify-content-end authorized d-none">
+    <a href="/" class="btn btn-primary" onclick="route()">Написать пост</a>
+  </div>
+  <div class="card mx-auto mt-4 col-12 col-md-8">
     <div class="card-header">
       Фильтры
     </div>
     <div class="card-body">
       <form id="form-filter">
-        <div class="row my-3">
+        <div class="row my-3 gap-3">
           <div class="col-12 col-md">
             <label for="searchByAuthors" class="form-label">Поиск по имени автора</label>
             <input type="text" class="form-control" id="searchByAuthors">
@@ -20,19 +23,19 @@
           <div class="col-12 col-md-4">
             <label for="sortingPosts" class="form-label">Сортировать</label>
             <select class="form-select" id="sortingPosts">
-              <option value="1">По дате создания (сначала новые)</option>
-              <option value="2">По дате создания (сначала старые)</option>
-              <option value="3">По количеству лайков (по возрастанию)</option>
-              <option value="4">По количеству лайков (по убывванию)</option>
+              <option value="CreateDesc">По дате создания (сначала новые)</option>
+              <option value="CreateAsc">По дате создания (сначала старые)</option>
+              <option value="LikeAsc">По количеству лайков (по возрастанию)</option>
+              <option value="LikeDesc">По количеству лайков (по убывванию)</option>
             </select>
           </div>
           <div class="col-12 col-md">
             <label for="searchMinMinutes" class="form-label">Время чтения от</label>
-            <input type="text" class="form-control" id="searchMinMinutes">
+            <input type="number" class="form-control" id="searchMinMinutes">
           </div>
           <div class="col-12 col-lg">
             <label for="searchMaxMinutes" class="form-label">Время чтения до</label>
-            <input type="text" class="form-control" id="searchMaxMinutes">
+            <input type="number" class="form-control" id="searchMaxMinutes">
           </div>
           <div class="col-12 col-lg authorized d-none">
             <div class="form-check">
@@ -43,7 +46,7 @@
             </div>
           </div>
           <div class="col-12 col-lg">
-            <div class="d-flex justify-content-end mb-3">
+            <div class="mt-3">
               <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
             </div>
           </div>
@@ -54,14 +57,15 @@
   </div>
   <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="postCarts">
     <div class="card-body">
-        <p class="card-text mb-3" id="user-text">Test</p>
-        <h3 class="card-title">Test</h3>
-      <div class="col-md-12 text-center">
+        <p class="card-text mb-3" id="user-text"></p>
+        <h3 class="card-title"></h3>
+      <div class="text-center">
         <img src="" class="img-fluid mb-3" alt="">
       </div>
-        <p class="card-text mb-3" id="post-text">Test</p>
-        <p class="card-text mb-3" id="tags-text">Test</p>
-        <p class="card-text mb-3" id="time-text">Test</p>
+        <p class="card-text mb-3" id="post-text"></p>
+        <p class="card-text mb-3" id="tags-text"></p>
+        <p class="card-text mb-3" id="time-text"></p>
+        <p class="card-text mb-3 d-none" id="address-text"><i class="fas fa-compass"></i></p>
     </div>
     <div class="card-footer d-flex justify-content-between">
       <div class="d-flex align-items-center">
@@ -75,4 +79,14 @@
     </div>
   </div>
   <div id="postsOnPage"></div>
+  <div class="mx-auto col-12 col-md-8 d-flex justify-content-between">
+    <nav class="mt-4">
+      <ul class="pagination" id="pageDisplay">
+      </ul>
+    </nav>
+    <div class="mt-2">
+      <label for="sizePage" class="form-label">Число постов на странице</label>
+      <input type="number" class="form-control" id="sizePage" min="0" value="5">
+    </div>
+  </div>
 </div>
