Добавил получение конкретного поста при клике на название
Пост пока загружается без коментариев и возможности оставлять свой, слегка изменил работу с url, чтобы при ссылках post/1235a72e-01d5-4f19-941a-ddcbdd17a45f в params сохранялось 1235a72e-01d5-4f19-941a-ddcbdd17a45f и запускалась правильная функция, также исправил работу с выводом текста, появилась кнопка читать дальше, которая при нажатии открывает текст целиком и она не появляется на страницах с конкретным постом

--- a/views/filter.html
+++ b/views/filter.html
@@ -1,6 +1,6 @@
 <div class="card-wrapper">
   <div class="mx-auto mt-4 col-12 col-md-8 d-flex justify-content-end authorized d-none">
-    <a href="/" class="btn btn-primary" onclick="route()">Написать пост</a>
+    <a href="#" class="btn btn-primary">Написать пост</a>
   </div>
   <div class="card mx-auto mt-4 col-12 col-md-8">
     <div class="card-header">
@@ -57,8 +57,8 @@
   </div>
   <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="postCarts">
     <div class="card-body">
-        <p class="card-text mb-3" id="user-text"></p>
-        <h3 class="card-title"></h3>
+      <p class="card-text mb-3" id="user-text"></p>
+      <h3 class="card-title" id="post-title" href="#"></h3>
       <div class="text-center">
         <img src="" class="img-fluid mb-3" alt="">
       </div>
