Полностью доделал комментарии
Сделал удаление, изменение и добавление комментариев к посту и ответов к другим комментариям, сделал так, чтобы кнопка расскрыть ответы удалялась после нажатия, сделал так чтобы кнопка ответить появлялась только у авторизованого пользователя, как и карточка с написанием комментария, к измененным коментариям добавил пометку "изменен" при наведении на которую выводится дата и время изменения комментария, сделал так, что при нажатии на кнопку с комментариями открывается страница, с конкретным постом, но она пролистывается до раздела комментариев

--- a/views/filter.html
+++ b/views/filter.html
@@ -63,14 +63,14 @@
         <img src="" class="img-fluid mb-3" alt="">
       </div>
         <p class="card-text mb-3" id="post-text"></p>
-        <p class="card-text mb-3" id="tags-text"></p>
+        <p class="card-text mb-3 text-muted" id="tags-text"></p>
         <p class="card-text mb-3" id="time-text"></p>
         <p class="card-text mb-3 d-none" id="address-text"><i class="fas fa-compass"></i></p>
     </div>
     <div class="card-footer d-flex justify-content-between">
       <div class="d-flex align-items-center">
         <p class="count-comments m-0">0</p>
-        <button type="button" class="btn" id="text-comments"><i class="far fa-comment-dots"></i></button>
+        <button type="button" class="btn" id="text-comments" href="#"><i class="far fa-comment-dots"></i></button>
       </div>
       <div class="d-flex align-items-center">
         <p class="count-like m-0">0</p>
