Добавил авторов и мелкие исправления
Сделал внешний вид для списка авторов, написал логику их генерации и нахождения полпулярных авторов и добавил функцию getDate.js чтобы постоянно не дублировать практически одинаковый код

--- a/views/style.css
+++ b/views/style.css
@@ -21,6 +21,17 @@ body {
     font-size: 1.15rem;
 }
 
-.card {
+.card, .author{
     overflow: auto;
+}
+
+.imgAuthors{
+    width: 64px;
+    height: 64px;
+}
+
+.imgPlace{
+    width: 40px;
+    height: 40px;
+    transform: rotate(45deg);
 }
