--- a/views/specificPost.html
+++ b/views/specificPost.html
@@ -43,7 +43,7 @@
 </div>
 
 <li class="d-none rootComment">
-    <div class="ms-2 mt-2">
+    <div class="mt-2">
         <div class="comment-header d-flex gap-1">
             <span class="comment-name"></span>
             <div class="d-none myComment">
