Сделал карточку написания поста, логику работы с адресами, тегами и группами и внес мелкие изменения
Закончил работу с адресами, сделал так что в списке групп отображаются только те группы в которых пользователь является администратором, добавил генерацию тегов, убрал некоторые ненужные классы, преместил getTags в отдельную функцию

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,5 +1,5 @@
 <div class="card-wrapper">
-  <div class="card mx-auto mt-4 col-12 col-md-8" style="height: auto;">
+  <div class="card mx-auto mt-4 col-md-8">
     <div class="card-body">
       <form id="form-profile">
         <div class="row my-3">
