--- a/views/filter.html
+++ b/views/filter.html
@@ -1,26 +1,26 @@
 <div class="card-wrapper">
-  <div class="mx-auto mt-4 col-12 col-md-8 d-flex justify-content-end authorized d-none">
-    <a href="#" class="btn btn-primary">Написать пост</a>
+  <div class="mx-auto mt-4 col-md-8 d-flex justify-content-end authorized d-none">
+    <a href="/post/create" class="btn btn-primary">Написать пост</a>
   </div>
-  <div class="card mx-auto mt-4 col-12 col-md-8">
+  <div class="card mx-auto mt-4 col-md-8">
     <div class="card-header">
       Фильтры
     </div>
     <div class="card-body">
       <form id="form-filter">
-        <div class="row my-3 gap-3">
-          <div class="col-12 col-md">
+        <div class="row my-3">
+          <div class="col-md">
             <label for="searchByAuthors" class="form-label">Поиск по имени автора</label>
             <input type="text" class="form-control" id="searchByAuthors">
           </div>
-          <div class="col-12 col-md">
+          <div class="col-md">
             <label for="searchByTags" class="form-label">Поиск по тегам</label>
             <select class="form-select" size="3" id="searchByTags" multiple>
             </select>
           </div>
         </div>
         <div class="row mb-3 align-items-center">
-          <div class="col-12 col-md-4">
+          <div class="col-md-4">
             <label for="sortingPosts" class="form-label">Сортировать</label>
             <select class="form-select" id="sortingPosts">
               <option value="CreateDesc">По дате создания (сначала новые)</option>
@@ -29,15 +29,15 @@
               <option value="LikeDesc">По количеству лайков (по убывванию)</option>
             </select>
           </div>
-          <div class="col-12 col-md">
+          <div class="col-md">
             <label for="searchMinMinutes" class="form-label">Время чтения от</label>
             <input type="number" class="form-control" id="searchMinMinutes">
           </div>
-          <div class="col-12 col-lg">
+          <div class="col-lg">
             <label for="searchMaxMinutes" class="form-label">Время чтения до</label>
             <input type="number" class="form-control" id="searchMaxMinutes">
           </div>
-          <div class="col-12 col-lg authorized d-none">
+          <div class="col-lg authorized d-none">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckGroups">
               <label class="form-check-label" for="flexCheckGroups">
@@ -45,7 +45,7 @@
               </label>
             </div>
           </div>
-          <div class="col-12 col-lg">
+          <div class="col-lg">
             <div class="mt-3">
               <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
             </div>
@@ -55,7 +55,7 @@
       </form>
     </div>
   </div>
-  <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="postCarts">
+  <div class="card mx-auto mt-4 col-md-8 d-none" id="postCarts">
     <div class="card-body">
       <p class="card-text mb-3" id="user-text"></p>
       <h3 class="card-title" id="post-title" href="#"></h3>
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div id="postsOnPage"></div>
-  <div class="mx-auto col-12 col-md-8 d-flex justify-content-between">
+  <div class="mx-auto col-md-8 d-flex justify-content-between">
     <nav class="mt-4">
       <ul class="pagination" id="pageDisplay">
       </ul>
