--- a/views/createUserPost.html
+++ b/views/createUserPost.html
@@ -19,7 +19,7 @@
                     <div class="col-md">
                         <label for="createByGroups" class="form-label">Группа</label>
                         <select class="form-select" id="createByGroups">
-                            <option>Без группы</option>
+                            <option value="0">Без группы</option>
                         </select>
                     </div>
                     <div class="col-md">
@@ -41,10 +41,14 @@
                     <div class="mb-3" id="addressElem">
                         <label for="l-0">Субъект РФ</label>
                         <select class="selectAddress form-control" id="l-0">
-                            <option value="0"></option>
+                            <option value="0" class="d-none"></option>
+                            <option value="0">-</option>
                             <option value="1281271">обл Томская</option>
                         </select>
                     </div>
+                </div>
+                <div class="d-flex justify-content-end mb-3">
+                    <button type="submit" class="btn btn-primary">Создать пост</button>
                 </div>
                 <div class="text-center error-mes" style="display: none">Неверные данные</div>
             </form>
