Добавил и исправил валидацию и изменил расположения некоторых объектов
Добавил валидацию постов, исправил валидацию комментариев, настроил внешний вид сайта, чтобы при разрешении как на телефоне некоторые поля не находились слишком близко друг к другу

--- a/views/createUserPost.html
+++ b/views/createUserPost.html
@@ -5,24 +5,24 @@
         </div>
         <div class="card-body">
             <form id="form-create-user-post">
-                <div class="row my-3">
-                    <div class="col-md-9">
+                <div class="row mt-3">
+                    <div class="col-md-9 mb-3">
                         <label for="createNamePost" class="form-label">Название</label>
                         <input type="text" class="form-control" id="createNamePost" name="namePost">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-3">
                         <label for="createReadingTime" class="form-label">Время чтения</label>
                         <input type="text" class="form-control" id="createReadingTime" name="readingTimePost">
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-md">
+                <div class="row">
+                    <div class="col-md mb-3">
                         <label for="createByGroups" class="form-label">Группа</label>
                         <select class="form-select" id="createByGroups">
                             <option value="0">Без группы</option>
                         </select>
                     </div>
-                    <div class="col-md">
+                    <div class="col-md mb-3">
                         <label for="createByTags" class="form-label">Тэги</label>
                         <select class="form-select" size="3" id="createByTags" name="tagsPost" multiple>
                         </select>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="createImg" class="form-label">Ссылка на картинку</label>
-                    <input type="text" class="form-control" id="createImg">
+                    <input type="text" class="form-control" id="createImg" name="imgPost">
                 </div>
                 <div class="mb-3">
                     <label for="createTextPost">Текст</label>
