--- a/views/filter.html
+++ b/views/filter.html
@@ -8,19 +8,19 @@
     </div>
     <div class="card-body">
       <form id="form-filter">
-        <div class="row my-3">
-          <div class="col-md">
+        <div class="row mt-3">
+          <div class="col-md mb-3">
             <label for="searchByAuthors" class="form-label">Поиск по имени автора</label>
             <input type="text" class="form-control" id="searchByAuthors">
           </div>
-          <div class="col-md">
+          <div class="col-md mb-3">
             <label for="searchByTags" class="form-label">Поиск по тегам</label>
             <select class="form-select" size="3" id="searchByTags" multiple>
             </select>
           </div>
         </div>
-        <div class="row mb-3 align-items-center">
-          <div class="col-md-4">
+        <div class="row align-items-center">
+          <div class="col-md-4 mb-3">
             <label for="sortingPosts" class="form-label">Сортировать</label>
             <select class="form-select" id="sortingPosts">
               <option value="CreateDesc">По дате создания (сначала новые)</option>
@@ -29,15 +29,15 @@
               <option value="LikeDesc">По количеству лайков (по убывванию)</option>
             </select>
           </div>
-          <div class="col-md">
+          <div class="col-md mb-3">
             <label for="searchMinMinutes" class="form-label">Время чтения от</label>
             <input type="number" class="form-control" id="searchMinMinutes">
           </div>
-          <div class="col-lg">
+          <div class="col-lg mb-3">
             <label for="searchMaxMinutes" class="form-label">Время чтения до</label>
             <input type="number" class="form-control" id="searchMaxMinutes">
           </div>
-          <div class="col-lg authorized d-none">
+          <div class="col-lg authorized d-none mb-3">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckGroups">
               <label class="form-check-label" for="flexCheckGroups">
@@ -45,10 +45,8 @@
               </label>
             </div>
           </div>
-          <div class="col-lg">
-            <div class="mt-3">
-              <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
-            </div>
+          <div class="col-lg mb-3">
+            <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
           </div>
         </div>
         <div class="text-center error-mes" style="display: none">Неверные данные</div>
@@ -58,8 +56,8 @@
   <div class="card mx-auto mt-4 col-md-8 d-none" id="postCarts">
     <div class="card-body">
       <p class="card-text mb-3" id="user-text"></p>
-      <h3 class="card-title" id="post-title" href="#"></h3>
-      <div class="text-center">
+      <h3 class="card-title mb-3" id="post-title" href="#"></h3>
+      <div class="text-center d-none imgInDiv">
         <img src="" class="img-fluid mb-3" alt="">
       </div>
         <p class="card-text mb-3" id="post-text"></p>
@@ -79,7 +77,7 @@
     </div>
   </div>
   <div id="postsOnPage"></div>
-  <div class="mx-auto col-md-8 d-flex justify-content-between">
+  <div class="mx-auto col-md-8 d-flex justify-content-between flex-wrap">
     <nav class="mt-4">
       <ul class="pagination" id="pageDisplay">
       </ul>
