--- a/views/specificPost.html
+++ b/views/specificPost.html
@@ -2,8 +2,8 @@
     <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="postCarts">
         <div class="card-body" id="specificPostCarts">
             <p class="card-text mb-3" id="user-text"></p>
-            <h3 class="card-title" id="post-title" href="#"></h3>
-            <div class="text-center">
+            <h3 class="card-title mb-3" id="post-title" href="#"></h3>
+            <div class="text-center d-none imgInDiv">
                 <img src="" class="img-fluid mb-3" alt="">
             </div>
             <p class="card-text mb-3" id="post-text"></p>
