Добавил страницу со списком групп и мелкие изменения
Добавил логику подписки и одписки, сделал так, что администратор группы не может не подписаться, не отписаться от своей группы, поменял атрибут хранения id постов с href на data-value, и удалил лишние card-wrapper объекты

--- a/views/authors.html
+++ b/views/authors.html
@@ -1,25 +1,23 @@
-<div class="card-wrapper">
-    <ul class="list-group list-group-flush mx-auto mt-4 col-12 col-md-8" id="authors">
-        <li class="list-group-item author d-none">
-            <div class="d-flex">
-                <div class="position-relative">
-                    <img src="" alt="" class="imgAuthors">
-                    <img src="" alt="" class="imgPlace position-absolute top-0 end-0 d-none">
-                </div>
-                <div class="ms-2 flex-grow-1">
-                    <div class="row">
-                        <div class="d-flex flex-wrap align-items-start col-md">
-                            <h5 class="mb-2 me-2 authorName"></h5>
-                            <p class="fw-bold text-secondary mb-2 createAuthorDate"></p>
-                        </div>
-                        <div class="d-flex gap-1 col-md justify-content-md-end">
-                            <h5><span class="badge bg-secondary postCount"></span></h5>
-                            <h5><span class="badge bg-secondary likeCount"></span></h5>
-                        </div>
-                    </div>
-                    <p class="fw-bold text-secondary mb-2 birthAuthorDate"></p>
-                </div>
+<ul class="list-group list-group-flush mx-auto mt-4 col-md-8" id="authors">
+    <li class="list-group-item author d-none">
+        <div class="d-flex">
+            <div class="position-relative">
+                <img src="" alt="" class="imgAuthors">
+                <img src="" alt="" class="imgPlace position-absolute top-0 end-0 d-none">
             </div>
-        </li>
-    </ul>
-</div>
+            <div class="ms-2 flex-grow-1">
+                <div class="row">
+                    <div class="d-flex flex-wrap align-items-start col-md">
+                        <h5 class="mb-2 me-2 authorName"></h5>
+                        <p class="fw-bold text-secondary mb-2 createAuthorDate"></p>
+                    </div>
+                    <div class="d-flex gap-1 col-md justify-content-md-end">
+                        <h5><span class="badge bg-secondary postCount"></span></h5>
+                        <h5><span class="badge bg-secondary likeCount"></span></h5>
+                    </div>
+                </div>
+                <p class="fw-bold text-secondary mb-2 birthAuthorDate"></p>
+            </div>
+        </div>
+    </li>
+</ul>
