--- a/views/filter.html
+++ b/views/filter.html
@@ -56,7 +56,7 @@
   <div class="card mx-auto mt-4 col-md-8 d-none" id="postCarts">
     <div class="card-body">
       <p class="card-text mb-3" id="user-text"></p>
-      <h3 class="card-title mb-3" id="post-title" href="#"></h3>
+      <h3 class="card-title mb-3" id="post-title"></h3>
       <div class="text-center d-none imgInDiv">
         <img src="" class="img-fluid mb-3" alt="">
       </div>
