--- a/views/specificCommunity.html
+++ b/views/specificCommunity.html
@@ -1,6 +1,24 @@
-<div class="card-wrapper mx-auto col-md-8 ">
-  <div class="mt-4 d-flex justify-content-end authorized d-none">
-    <a href="/post/create" class="btn btn-primary">Написать пост</a>
+<div class="card-wrapper mx-auto col-md-8">
+  <div class="card mt-4">
+    <div class="card-body">
+      <div class="d-flex justify-content-between flex-wrap">
+        <h1 class="card-title mb-3 community-title"></h1>
+        <div class="mb-3" id="btnCommunity">
+          <a href="/post/create" class="btn btn-primary createCommunityPost d-none">Написать пост</a>
+          <button type="button" class="btn subscribe btn-primary d-none">Подписаться</button>
+          <button type="button" class="btn unsubscribe btn-danger d-none">Отписаться</button>
+        </div>
+      </div>
+      <i class="fas fa-users mb-3"></i><span class="card-text community-text"></span>
+      <p class="card-text mb-3 type-community-text"></p>
+      <h3 class="card-title mb-3 admin-title">Администраторы</h3>
+      <ul class="list-group list-group-flush admins">
+        <li class="list-group-item admin d-flex d-none">
+          <img src="" alt="" class="imgAuthors">
+          <h4 class="mb-2 me-2 adminName"></h4>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="card mt-4">
     <div class="card-header">
@@ -10,17 +28,6 @@
       <form id="form-filter">
         <div class="row mt-3">
           <div class="col-md mb-3">
-            <label for="searchByAuthors" class="form-label">Поиск по имени автора</label>
-            <input type="text" class="form-control" id="searchByAuthors">
-          </div>
-          <div class="col-md mb-3">
-            <label for="searchByTags" class="form-label">Поиск по тегам</label>
-            <select class="form-select" size="3" id="searchByTags" multiple>
-            </select>
-          </div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col-md-4 mb-3">
             <label for="sortingPosts" class="form-label">Сортировать</label>
             <select class="form-select" id="sortingPosts">
               <option value="CreateDesc">По дате создания (сначала новые)</option>
@@ -30,24 +37,13 @@
             </select>
           </div>
           <div class="col-md mb-3">
-            <label for="searchMinMinutes" class="form-label">Время чтения от</label>
-            <input type="number" class="form-control" id="searchMinMinutes">
+            <label for="searchByTags" class="form-label">Поиск по тегам</label>
+            <select class="form-select" size="3" id="searchByTags" multiple>
+            </select>
           </div>
-          <div class="col-lg mb-3">
-            <label for="searchMaxMinutes" class="form-label">Время чтения до</label>
-            <input type="number" class="form-control" id="searchMaxMinutes">
-          </div>
-          <div class="col-lg authorized d-none mb-3">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckGroups">
-              <label class="form-check-label" for="flexCheckGroups">
-                Только мои группы
-              </label>
-            </div>
-          </div>
-          <div class="col-lg mb-3">
-            <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
-          </div>
+        </div>
+        <div class="d-flex justify-content-end mb-3">
+          <button type="submit" class="btn btn-primary" id="SaveFilter">Применить</button>
         </div>
         <div class="text-center error-mes" style="display: none">Неверные данные</div>
       </form>
@@ -60,10 +56,10 @@
       <div class="text-center d-none imgInDiv">
         <img src="" class="img-fluid mb-3" alt="">
       </div>
-        <p class="card-text mb-3" id="post-text"></p>
-        <p class="card-text mb-3 text-muted" id="tags-text"></p>
-        <p class="card-text mb-3" id="time-text"></p>
-        <p class="card-text mb-3 d-none" id="address-text"><i class="fas fa-compass"></i></p>
+      <p class="card-text mb-3" id="post-text"></p>
+      <p class="card-text mb-3 text-muted" id="tags-text"></p>
+      <p class="card-text mb-3" id="time-text"></p>
+      <p class="card-text mb-3 d-none" id="address-text"><i class="fas fa-compass"></i></p>
     </div>
     <div class="card-footer d-flex justify-content-between">
       <div class="d-flex align-items-center">
