--- a/views/specificPost.html
+++ b/views/specificPost.html
@@ -1,5 +1,5 @@
-<div class="card-wrapper">
-    <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="postCarts">
+<div class="card-wrapper mx-auto col-md-8">
+    <div class="card mt-4 d-none" id="postCarts">
         <div class="card-body" id="specificPostCarts">
             <p class="card-text mb-3" id="user-text"></p>
             <h3 class="card-title mb-3" id="post-title"></h3>
@@ -22,14 +22,14 @@
             </div>
         </div>
     </div>
-    <div class="card mx-auto mt-4 col-12 col-md-8 d-none" id="commentCarts">
+    <div class="card mt-4 d-none" id="commentCarts">
         <div class="card-body">
             <h3 class="card-title" id="comment-title">Комментарии</h3>
             <ul id="commentList" class="list-unstyled">
             </ul>
         </div>
     </div>
-    <div class="card mx-auto mt-4 col-12 col-md-8 authorized" id="commentWrite">
+    <div class="card mt-4 authorized" id="commentWrite">
         <div class="card-body">
             <form class="commentWriteForm" id="addCommentToPost">
                 <label for="com-write">Оставьте комментарий</label>
