--- a/views/createUserPost.html
+++ b/views/createUserPost.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="createImg" class="form-label">Ссылка на картинку</label>
-                    <input type="text" class="form-control" id="createImg" name="imgPost">
+                    <input type="url" class="form-control" id="createImg" name="imgPost">
                 </div>
                 <div class="mb-3">
                     <label for="createTextPost">Текст</label>
